<resources>
    <string name="app_name">The People That You Can Trust</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="android_text">Android</string>
    <string name="ios_text">iOS</string>

    <string name="menu_about_us">About Us</string>
    <string name="menu_browse_companies">Browse Companies</string>
    <string name="menu_search_companies">Search Companies</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_company_sales">Company Sales</string>
    <string name="search_companies_fragment_header">What can we help you find today?</string>
    <string name="search_hint_text">Search</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="companies_button_text">Browse companies</string>
    <string name="no_internet_error_message">No internet connection found.</string>
    <string name="no_internet_error_message_2">Please check connection and try again</string>
    <string name="internal_error_message">We\'re having trouble loading this page right now. We\'re on it! </string>
    <string name="app_update_title_text">App update available</string>
    <string name="app_update_body_text">Update below to see the newest features!</string>
    <string name="pop_up_dialog_update_btn_text">Update</string>
    <string name="pop_up_dialog_dismiss_btn_text">Dismiss</string>
    <string name="share_app_body_text">Easily share the app with anyone by scanning QR code or copying the app link below!</string>
    <string name="share_app_header_text">Let other people know about TPTYCT</string>
    <string name="scrolling_banner_text">** SALE ALERT: CLICK HERE TO SEE WHAT COMPANIES ARE HAVING A SALE! ** </string>
</resources>