<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/info_icon"
            android:title="@string/menu_about_us" />

        <item
            android:id="@+id/nav_browse_companies"
            android:icon="@drawable/sharp_apartment_24"
            android:title="@string/menu_browse_companies"/>
        <item
            android:id="@+id/nav_search_companies"
            android:icon="@drawable/search_icon"
            android:title="@string/menu_search_companies" />

        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/share_icon"
            android:title="@string/menu_share_app" />
    </group>
</menu>